--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8"/>
     <title>Askme</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -10,6 +11,19 @@
   </head>
 
   <body>
-    <%= yield %>
+    <div class="header">
+      <div class="container">
+        <div class="header-logo">
+          <h1 class="header-title"><%= link_to "Вопросы", root_path %></h1>
+        </div>
+      </div>
+    </div>
+
+    <div class="content">
+      <div class="container">
+        <%= yield %>
+      </div>
+    </div>
+
   </body>
 </html>
