users + sessions controllers

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,11 +16,30 @@
         <div class="header-logo">
           <h1 class="header-title"><%= link_to "Вопросы", root_path %></h1>
         </div>
+
+        <div class="header-nav">
+          <% if current_user %>
+            <%= link_to "@#{current_user.username}", user_path(current_user) %>
+            <%= link_to 'Выйти', log_out_path %>
+          <% else  %>
+            <%= link_to 'Зарегестрироваться', sign_up_path, class: 'button button-light button-small' %>
+            <%= link_to 'Войти', log_in_path, class: 'button button-light button-small'  %>
+          <% end %>
+        </div>
       </div>
     </div>
 
     <div class="content">
       <div class="container">
+
+        <% if flash.any? %>
+          <div class="content-wrapper buffer-both">
+            <% flash.each do |name, message| %>
+              <%= content_tag :div, message, class: "flash-#{name}" %>
+            <% end %>
+          </div>
+        <% end %>
+
         <%= yield %>
       </div>
     </div>
