--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,2 +1,55 @@
-<h1>Users#new</h1>
-<p>Find me in app/views/users/new.html.erb</p>
+<%# Страница для регистрации нового пользователя. %>
+
+<div class="container content-wrapper buffer-both">
+  <h1 class="title-medium">Присоединяйся к нам!</h1>
+
+  <div class="column-1-2">
+    <%= form_for @user do |f| %>
+
+      <% if @user.errors.any? %>
+        <div class="form-errors">
+          <ul>
+            <% for message in @user.errors.full_messages %>
+              <% if !message.include?("is invalid") %>
+                <li class="form-error-message"><%= message %></li>
+              <% end %>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
+
+      <div class="form-field">
+        <%= f.label :email, 'Логин (email)', class: 'form-label' %>
+        <%= f.text_field :email, class: 'form-text-field' %>
+      </div>
+
+      <%# Поступаем аналогично для других полей %>
+      <div class="form-field">
+        <%= f.label :username, 'Никнейм', class: 'form-label' %>
+        <%= f.text_field :username, class: 'form-text-field' %>
+      </div>
+
+      <div class="form-field">
+        <%= f.label :name, 'Имя', class: 'form-label' %>
+        <%= f.text_field :name, class: 'form-text-field' %>
+      </div>
+
+      <div class="form-field">
+        <%= f.label :password, 'Пароль', class: 'form-label' %>
+        <%= f.password_field :password, class: 'form-text-field' %>
+      </div>
+
+      <div class="form-field">
+        <%= f.label :password_confirmation, 'Пароль ещё раз', class: 'form-label' %>
+        <%= f.password_field :password_confirmation, class: 'form-text-field' %>
+      </div>
+
+      <div class="form-action">
+        <%= f.submit 'Зарегистрироваться', class: 'button button-small button-dark' %>
+      </div>
+    <% end %>
+
+    <%# Подробнее про помощники для создания форм: %>
+    <%# http://guides.rubyonrails.org/form_helpers.html %>
+  </div>
+</div>
