--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,10 @@
     <%= @user.name %>
   </h1>
 
+  <div class = "buffer-both">
+    <%= link_to 'Редактировать профиль', edit_user_path(@user) if current_user == @user %>
+  </div>
+
   <div class="user-image-div">
     <%= image_tag user_avatar(@user), class: 'user-image', alt: '[Фото]' %>
   </div>
