--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,5 +1,6 @@
 <div class="question">
   <div class="question-content">
+
     <div class="question-text text-lead">
       <%= question.text %>
     </div>
@@ -11,7 +12,17 @@
     <% end %>
 
     <div class="question-date">
-      <%= question.created_at.strftime('%d %b %M:%H') %>
+      <%= l(question.created_at, format: :short) %>
     </div>
   </div>
+
+  <% if question.user == current_user %>
+    <% edit_icon = question.answer.blank? ? 'reply' : 'pencil' %>
+
+    <div class="question-actions">
+      <%= link_to fa_icon(edit_icon), edit_question_path(question) %>
+      <%= link_to fa_icon('trash-o'), question_path(question),
+                  method: :delete, data: {confirm: 'Точно удалить вопрос?'} %>
+    </div>
+  <% end %>
 </div>
