--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -21,13 +21,44 @@
   </div>
 </div>
 
-<div class="user-posts" >
-  <h2 class="title-medium">
-    Задано <%= @questions.count %>
+<!--<div class="user-posts" >
+  <h3 id="h" class="title-medium">
+    Всего <%#= @questions.count %>
     <%= declination_of_word(
-            @questions.count, "вопрос", "вопроса", "вопросов") %>:
-  </h2>
+            @questions.count, "вопрос", "вопроса", "вопросов") %>
+  </h3>
+</div>-->
+
+<%# Блок количества всех/отвеченных вопросов %>
+<div class="column-3-4">
+  <div class="questions-block-background">
+  <div class="questions-block buffer-both">
+    <div class="questions-all">
+      <%= image_tag asset_path 'all_questions.png', alt: '[Все вопросы]' %>
+      <div class="text-lead questions-block-text">
+        Задано <%= @questions.count %>
+        <%= declination_of_word(
+                @questions.count, "вопрос", "вопроса", "вопросов") %>
+      </div>
+    </div>
+    <div class="questions-complite">
+      <%= image_tag asset_path 'complite_questions.png', alt: '[Отвеченные вопросы]' %>
+      <div class="text-lead questions-block-text">
+        <% complite_questions = @questions.count { |question| question.answer }%>
+        <% if @questions.count == complite_questions %>
+          Нет неотвеченных вопросов
+        <% else %>
+          Отвечено на <%= complite_questions%>
+          <%= declination_of_word(
+                  complite_questions, "вопрос", "вопроса", "вопросов") %>
+          из <%=@questions.count %>
+        <% end %>
+      </div>
+    </div>
+  </div>
+  </div>
 </div>
+
 
 <%# Блок с формой для задавания пользователю вопроса %>
 <div class="user-question-form-div column-1-4 column-1-4-right" id='ask-form'>
