profile_background migration that add profile color choice

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -30,6 +30,11 @@
         <%= f.text_field :avatar_url, class: 'form-text-field' %>
       </div>
 
+      <div class="form-field">
+        <%= f.label 'Цвет фона', class: 'form-label' %>
+        <%= f.color_field :profile_background %>
+      </div>
+
       <div class="buffer-top-large buffer-bottom">
         Если не хотите менять пароль — оставьте эти поля пустыми!
       </div>
