--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
   </div>
 
   <div class="user-image-div">
-    <%= image_tag user_avatar(@user), class: 'user-image', alt: '[Фото]' %>
+    <%= image_tag user_avatar(@user), class: 'user-image' %>
   </div>
 
   <h2 class="title-small buffer-both">
