--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -3,7 +3,7 @@
   <h1 class="title-medium">Править профиль</h1>
 
   <div class="column-1-2">
-    <%= form_for(@user) do |f| %>
+    <%= form_for @user, html: { multipart: true} do |f| %>
 
       <% if @user.errors.any? %>
         <div class="form-errors">
@@ -26,13 +26,13 @@
       </div>
 
       <div class="form-field">
-        <%= f.label 'URL вашей аватарки', class: 'form-label' %>
-        <%= f.text_field :avatar_url, class: 'form-text-field' %>
+        <%= f.label 'Загрузить фотографию', for: 'upload_file', class: 'file-color-label' %>
+        <%= f.file_field :avatar, class: 'hide', id: 'upload_file' %>
       </div>
 
       <div class="form-field">
-        <%= f.label 'Цвет фона', class: 'form-label' %>
-        <%= f.color_field :profile_background %>
+        <%= f.label 'Цвет фона', for: 'upload_bgc', class: 'file-color-label' %>
+        <%= f.color_field :profile_background, class: 'hide', id: 'upload_bgc'%>
       </div>
 
       <div class="buffer-top-large buffer-bottom">
