--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,8 +1,21 @@
 <div class="question">
   <div class="question-content">
 
-    <div class="question-text text-lead">
-      <%= question.text %>
+    <div class="question-title">
+      <div class="question-text text-lead">
+        <%= question.text %>
+      </div>
+
+      <% if author_by_id(question.author_id) %>
+        <div class="question-author">
+          <div class="question-author-username">
+            <%= link_to "@#{author_by_id(question.author_id).username}", user_path(author_by_id(question.author_id)) %>
+          </div>
+          <div class="question-author-image">
+            <%= image_tag user_avatar(author_by_id(question.author_id)), class: 'user-image' %>
+          </div>
+        </div>
+      <% end %>
     </div>
 
     <% if question.answer.present? %>
