Add validate in bgc

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -32,7 +32,7 @@
 
       <div class="form-field">
         <%= f.label 'Цвет фона', for: 'upload_bgc', class: 'file-color-label' %>
-        <%= f.color_field :profile_background, value: "#005a55", pattern: "#[a-zA-Z0-9]{,6}", class: 'hide', id: 'upload_bgc'%>
+        <%= f.color_field :profile_background, value: "#005a55", class: 'hide', id: 'upload_bgc'%>
       </div>
 
       <div class="buffer-top-large buffer-bottom">
