fix bag with hashtag title

--- a/app/views/hashtags/show.html.erb
+++ b/app/views/hashtags/show.html.erb
@@ -1,5 +1,5 @@
 <div class="column-3-4">
-  <p class="hashtag-title buffer-both"><%= @questions.first.hashtags[0].text %>:</p>
+  <p class="hashtag-title buffer-both"><%= @hashtag.text %>:</p>
   <div class="user-questions buffer-both">
     <div class="questions-list">
       <% @questions.each do |question| %>
