--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -34,6 +34,8 @@
           <%= f.text_area :text, class: 'form-textarea' %>
         </div>
 
+        <%= recaptcha_tags size: 'compact' unless current_user.present? %>
+
         <div class="form-action">
           <%= submit_tag 'Задать вопрос', class: 'button button-small button-dark' %>
         </div>
